opam-version: "2.0"
name: "deepsec"
version: "2.0.1"
synopsis: "DeepSec: DEciding Equivalence Properties in SECurity Protocols"
description: """
Automated verification has become an essential part in the security evaluation of cryptographic protocols. Recently, there has been a considerable effort to lift the theory and tool support that existed for reachability properties to the more complex case of equivalence properties.

DeepSec is a verification tool which allows verification of trace equivalence and equivalence by session for a large variety of user defined cryptographic primitives—those that can be represented by a subterm convergent destructor rewrite system.

The user manual is available at

https://deepsec-prover.github.io/manual/
"""
maintainer:
  "Vincent Cheval <vincent.cheval@inria.fr>"
authors:
  "Vincent Cheval <vincent.cheval@inria.fr>, Steve Kremer <steve.kremer@inria.fr>, Itsaka Rakotonirina <itsaka.rakotonirina@inria.fr>,"
homepage: "https://deepsec-prover.github.io/"
bug-reports: "Bug reports should be filed as issues on the github repository: https://github.com/DeepSec-prover/deepsec/issues"
license: "GNU General Public License v3.0"

depends: ["ocaml" { >= "4.05" }
	  "ocamlfind"
	  "ocamlbuild"
	   ]
build: [make]

install: [make "install" "BINDIR=%{bin}%"]
